--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.2.2",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
