refactor+fix: admin auth redirects fixed, 404 fallback implemented.

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
+            "app/Helpers/auth.php"
         ]
     },
     "autoload-dev": {
