--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "@vueuse/core": "^10.1.2"
+        "@vueuse/core": "^10.1.2",
+        "vue3-carousel": "^0.3.1"
     }
 }
